<resources>
    <string name="app_name">Todo App</string>


    <string name="points_label">Points:</string>
    <string name="add_task">Add Task</string>
    <string name="task_info">Task Info:</string>
    <string name="task_info_view">Task Info:\n</string>
    <string name="task_edit">Edit task</string>
    <string name="task_delete">Delete task</string>
    <string name="repeat_label">Recurring days:\n</string>
    <string name="category_label">Category:\n</string>
    <string name="reminder_label">Reminders:\n</string>
    <string name="confirm_days">Confirm days</string>
    <string name="confirm_reminders">Confirm reminders</string>
    <string name="date_button">Choose date</string>
    <string name="time_button">Choose time</string>
    <string name="deadline_label">Deadline:\n</string>
    <string name="create_task_button">Save task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="rewards">Rewards</string>
    <string name="new_category">New category</string>
    <string name="delete_category">Delete category</string>
    <string name="notification_title">Task is due soon!</string>

    <string-array name="points_list">
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>
</resources>
