<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="seminarska.emp.todoapp.ViewTask">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:text="@string/task_info_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info_label"
                android:paddingTop="10sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:text="@string/deadline_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deadline_label"
                android:onClick="setDeadline"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:lineSpacingExtra="8sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reminder_label"
                android:onClick="showReminders"
                android:text="@string/reminder_label"
                android:textSize="14sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:lineSpacingExtra="8sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:weightSum="1">

            <Button
                android:text="@string/task_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delete_task_button"
                android:layout_weight="0.5"
                android:onClick="editTask" />

            <Button
                android:text="@string/task_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_task_button"
                android:layout_weight="0.5"
                android:onClick="deleteTask" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
